Adiciona icone ao author em custom_embed
